[package]
name = "luna-nas"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.7", features = ["macros"]}
bon = "3.8.1"
bytes = "1.11.0"
chrono = "0.4.42"
http = "1.3.1"
log = "0.4.29"
mime = "0.3.17"
sea-orm = { version = "1.1.0", features = [
    "sqlx-sqlite",
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print",
] }
serde = "1.0.228"
serde_json = "1.0.145"
snafu = "0.8.9"
thiserror = "2.0.17"
tokio ={version = "1.48.0", features = ["full"]} 
tonic = "0.14.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
